Fixed wanted level decrement in WantedExecutor